Some more formatting stuff

--- a/themes/Build.htm
+++ b/themes/Build.htm
@@ -1,3 +1,4 @@
+<div id="top_content">
 <div id="top_input_section" class="calc_content_wrap orange_bg">
 
   <form id="abundaInput" class="abundaInput" onsubmit="handleAddedItem(); return false;" submit="/trade/calculator.php" method="post" >
@@ -23,6 +24,17 @@
     <div class="submit_holder">
       <input class="submit" value="" type="submit"/>
     </div>
-    
     </form>
     </div>
+    
+    <div id="second_content" class="calc_content_wrap green_bg">
+                      <div class="second_content_sec1">
+                      <label>Total Items:</label><div id="total_item_count">0</div></div>
+                      <div class="second_content_sec2">
+                        <label>Pre-Valuation Total:</label>
+                        <div id="total_prevaluation">
+                          $0.00                        </div>
+                      </div>
+                      <div class="second_content_sec3"><a id="submitList" href="#"><img style="z-index:0;" src="../images/list-abunda.jpg" alt="" /></a></div>
+                      </div>
+                      </div>
